--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <a href="#over-ons">Over Ons</a>
                 <a href="#contact">Contact</a>
             </div>
-            <a href="tel:+31201234567" class="cta-button">Bel Direct</a>
+            <a href="tel:+31462402401" class="cta-button">Bel Direct</a>
         </nav>
     </header>
 
@@ -189,12 +189,13 @@
     <section class="contact" id="contact">
         <h2>Neem Contact Op</h2>
         <p>Vraag vrijblijvend een beveiligingsvoorstel aan voor uw project</p>
-        <a href="tel:+31201234567" class="cta-button" style="margin-top: 1rem;">Bel Direct</a>
+        <a href="tel:+31462402401" class="cta-button" style="margin-top: 1rem;">Bel Direct</a>
+        <p style="margin-top: 1rem;">Of stuur een e-mail naar: <a href="mailto:bouw@praesidion.nl">bouw@praesidion.nl</a></p>
     </section>
 
     <footer>
         <p>Bouwbeveiliging Nederland is een dienst van Praesidion Security.</p>
-        <p>&copy; 2024 Bouwbeveiliging Nederland. Alle rechten voorbehouden.</p>
+        <p>&copy; 2025 Bouwbeveiliging Nederland. Alle rechten voorbehouden.</p>
     </footer>
 
     <script type="application/ld+json">
