--- a/index.html
+++ b/index.html
@@ -112,6 +112,11 @@
             margin-bottom: 1rem;
         }
 
+        .about {
+            padding: 4rem 1rem;
+            background: var(--light);
+        }
+
         .contact {
             padding: 4rem 1rem;
             text-align: center;
@@ -177,12 +182,43 @@
             </article>
             <article class="service-card">
                 <h3>Camera- en Lichtmasten</h3>
-                <p>Moderne surveillance-oplossingen voor 24/7 toezicht.</p>
+                <p>Flexibele beveiligingsoplossingen voor uw project.</p>
             </article>
             <article class="service-card">
                 <h3>Mobiele Surveillance</h3>
-                <p>Flexibele beveiligingsoplossingen voor uw project.</p>
+                <p>Moderne surveillance-oplossingen voor 24/7 toezicht.</p>
             </article>
+        </div>
+    </section>
+
+    <section class="about" id="over-ons" style="padding: 4rem 1rem; background: var(--light);">
+        <div style="max-width: 1200px; margin: 0 auto;">
+            <h2 style="text-align: center; margin-bottom: 2rem;">Over Ons</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
+                <article style="background: var(--gray); padding: 2rem; border-radius: 8px;">
+                    <h3 style="color: var(--secondary); margin-bottom: 1rem;">Onze Expertise</h3>
+                    <p>Als specialist in bouwplaatsbeveiliging in Limburg en heel Nederland, bieden wij al jaren professionele beveiligingsdiensten aan de bouwsector. Onze focus ligt op het waarborgen van veiligheid en het voorkomen van diefstal en vandalisme op bouwplaatsen.</p>
+                </article>
+                <article style="background: var(--gray); padding: 2rem; border-radius: 8px;">
+                    <h3 style="color: var(--secondary); margin-bottom: 1rem;">Certificeringen</h3>
+                    <ul style="list-style-position: inside; margin-top: 1rem;">
+                        <li>Beveiligingsdiploma</li>
+                        <li>Vergunning Korpschef</li>
+                        <li>VCA-certificering</li>
+                        <li>Project-specifieke certificeringen op aanvraag</li>
+                    </ul>
+                </article>
+                <article style="background: var(--gray); padding: 2rem; border-radius: 8px;">
+                    <h3 style="color: var(--secondary); margin-bottom: 1rem;">Ervaring</h3>
+                    <p>Wij zijn trots op onze samenwerkingen met toonaangevende bedrijven zoals:</p>
+                    <ul style="list-style-position: inside; margin-top: 1rem;">
+                        <li>SPIE</li>
+                        <li>Heijmans</li>
+                        <li>TenneT</li>
+                        <li>Diverse lokale aannemers</li>
+                    </ul>
+                </article>
+            </div>
         </div>
     </section>
 
@@ -194,7 +230,7 @@
     </section>
 
     <footer>
-        <p>Bouwbeveiliging Nederland is een dienst van Praesidion Security.</p>
+        <p>Bouwbeveiliging Nederland is een dienst van <a href="https://www.praesidion.nl" style="color: var(--light); text-decoration: underline;">Praesidion Security</a>.</p>
         <p>&copy; 2025 Bouwbeveiliging Nederland. Alle rechten voorbehouden.</p>
     </footer>
 
