--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
             </article>
             <article class="service-card">
                 <h3>Portiersdiensten</h3>
-                <p>Professionele portiers voor toegangscontrole en bezoekersregistratie.</p>
+                <p>Professionele portiers voor toegangscontrole, poortinstructies en bezoekersregistratie.</p>
             </article>
             <article class="service-card">
                 <h3>Camera- en Lichtmasten</h3>
-                <p>Flexibele beveiligingsoplossingen voor uw project.</p>
+                <p>Flexibele beveiligingsoplossingen voor 24/7 toezicht.</p>
             </article>
             <article class="service-card">
                 <h3>Mobiele Surveillance</h3>
-                <p>Moderne surveillance-oplossingen voor 24/7 toezicht.</p>
+                <p>Moderne surveillance- en alarmopvolgingsdiensten voor uw project.</p>
             </article>
         </div>
     </section>
@@ -197,7 +197,7 @@
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem;">
                 <article style="background: var(--gray); padding: 2rem; border-radius: 8px;">
                     <h3 style="color: var(--secondary); margin-bottom: 1rem;">Onze Expertise</h3>
-                    <p>Als specialist in bouwplaatsbeveiliging in Limburg en heel Nederland, bieden wij al jaren professionele beveiligingsdiensten aan de bouwsector. Onze focus ligt op het waarborgen van veiligheid en het voorkomen van diefstal en vandalisme op bouwplaatsen.</p>
+                    <p>Als specialist in bouwplaatsbeveiliging in Limburg en heel Nederland, bieden wij al jaren professionele beveiligingsdiensten aan de bouwsector. Onze focus ligt op het waarborgen van veiligheid en het voorkomen van diefstal en vandalisme op bouwplaatsen om de continuïteit van het project te waarborgen.</p>
                 </article>
                 <article style="background: var(--gray); padding: 2rem; border-radius: 8px;">
                     <h3 style="color: var(--secondary); margin-bottom: 1rem;">Certificeringen</h3>
@@ -205,6 +205,7 @@
                         <li>Beveiligingsdiploma</li>
                         <li>Vergunning Korpschef</li>
                         <li>VCA-certificering</li>
+                        <li>BHV-diploma</li>
                         <li>Project-specifieke certificeringen op aanvraag</li>
                     </ul>
                 </article>
@@ -243,7 +244,7 @@
             "@type": "Organization",
             "name": "Praesidion Security"
         },
-        "description": "Specialist in bouwplaatsbeveiliging in Limburg en heel Nederland",
+        "description": "Specialist in bouwplaatsbeveiliging in Limburg (en heel Nederland)",
         "areaServed": {
             "@type": "State",
             "name": "Limburg"
