--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://bouwbeveiligingnederland.nl">
     <title>Bouwbeveiliging Nederland | Specialist in Bouwplaatsbeveiliging</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <style>
         :root {
             --primary: #FFD700;
