--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://bouwbeveiligingnederland.nl">
     <title>Bouwbeveiliging Nederland | Specialist in Bouwplaatsbeveiliging</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" href="/favicon_png.png">
     <style>
         :root {
             --primary: #FFD700;
