--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </section>
 
     <section class="services" id="diensten">
-        <h2>Onze Diensten</h2>
+        <h2 style="text-align: center; margin-bottom: 2rem;">Onze Diensten</h2>
         <div class="services-grid">
             <article class="service-card">
                 <h3>Bouwplaatsbeveiliging</h3>
@@ -233,6 +233,7 @@
 
     <footer>
         <p>Bouwbeveiliging Nederland is een dienst van <a href="https://www.praesidion.nl" style="color: var(--light); text-decoration: underline;">Praesidion Security</a>.</p>
+        <p>KvK: 75321718</p>
         <p>&copy; 2025 Bouwbeveiliging Nederland. Alle rechten voorbehouden.</p>
     </footer>
 
