--- a/index.html
+++ b/index.html
@@ -215,8 +215,11 @@
     <header>
         <nav>
             <a href="/" class="logo">
-                <img src="/logo-bouwbeveiliging.svg" alt="Bouwbeveiliging Nederland Logo">
-                <span>Bouwbeveiliging Nederland</span>
+                <img src="logo-bouwbeveiliging.svg" alt="Bouwbeveiliging Nederland Logo">
+                <span style="display: flex; flex-direction: column;">
+                  <span>Bouwbeveiliging Nederland</span>
+                  <span style="font-size: 0.75rem; color: #e0e0e0; font-weight: 400; line-height: 1.2;">Onderdeel van Praesidion Security B.V.</span>
+                </span>
             </a>
             <div class="nav-links">
                 <a href="#diensten">Diensten</a>
@@ -230,6 +233,7 @@
     <section class="hero">
         <h1>Professionele Bouwplaatsbeveiliging</h1>
         <p>Specialist in bouwplaatsbeveiliging in Limburg en heel Nederland</p>
+        <p style="margin-top: 0.5rem; color: #FFD700; font-weight: bold;">Onderdeel van Praesidion Security B.V.</p>
         <a href="#contact" class="cta-button" style="margin-top: 2rem;">Vraag Vrijblijvend Voorstel</a>
     </section>
 
